pedagogy: fix display of guide on smaller devices

--- a/core/static/core/style.scss
+++ b/core/static/core/style.scss
@@ -1742,6 +1742,22 @@ $pedagogy-white-text: #f0f0f0;
       grid-template-rows: auto;
       grid-template-areas: "search-bar-input search-bar-button";
 
+      @media screen and (max-width: $medium-devices){
+        grid-template-columns: auto auto;
+        grid-template-rows: auto;
+        grid-template-areas: "search-bar-input search-bar-button";
+      }
+
+      @media screen and (max-width: $small-devices){
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        grid-template-areas: "search-bar-input";
+
+        .search-bar-button {
+          display: none;
+        }
+      }
+
       .search-bar-input {
         grid-area: search-bar-input;
         background: $pedagogy-light-blue;
